--- a/.github/workflows/weather.yml
+++ b/.github/workflows/weather.yml
@@ -18,10 +18,10 @@ jobs:
       - name: 'Send mail'
         uses: dawidd6/action-send-mail@master # 使用别人已经写好的 action
         with:
-          server_address: smtp.office365.com
-          server_port: 587
-          username: ${{ secrets.HOTMAIL_USERNAME }}
-          password: ${{ secrets.HOTMAIL_PASSWD }}
+          server_address: smtp.163.com
+          server_port: 465
+          username: ${{ secrets.MAIL_163_USERNAME }}
+          password: ${{ secrets.MAIL_163_PWD }}
           subject: Nanjing Weather Report (${{env.REPORT_DATE}})
           body: file://result.html
           to: wanshojs@gmail.com
