--- a/.github/workflows/weather.yml
+++ b/.github/workflows/weather.yml
@@ -18,7 +18,7 @@ jobs:
       - name: 'Send mail'
         uses: dawidd6/action-send-mail@master # 使用别人已经写好的 action
         with:
-          server_address: smtp.yandex.com
+          server_address: smtp.yandex.com # yandex 不需要认证，yandex 是俄罗斯最受欢迎的邮箱服务
           server_port: 465
           username: ${{ secrets.MAIL_YANDEX_USERNAME }}
           password: ${{ secrets.MAIL_YANDEX_PASSWD }}
@@ -27,6 +27,3 @@ jobs:
           to: wanshojs@gmail.com
           from: GitHub Actions
           content_type: text/html
-
-# dependence
-# http://help.163.com/09/1223/14/5R7P3QI100753VB8.html
