测试获取天气的 python 脚本

--- a/.github/workflows/my-actions.yml
+++ b/.github/workflows/my-actions.yml
@@ -30,7 +30,7 @@ jobs:
           username: ${{ secrets.MAIL_YANDEX_USERNAME }}
           password: ${{ secrets.MAIL_YANDEX_PASSWD }}
           subject: Nanjing Weather Report (${{env.REPORT_DATE}})
-          body: file://weather.json
+          body: file://weather.html
           to: wanshojs@gmail.com
           from: GitHub Actions
           content_type: text/html
