--- a/.github/workflows/my-actions.yml
+++ b/.github/workflows/my-actions.yml
@@ -1,14 +1,14 @@
-name: 'my-actions'
+name: 'daily-report'
 
 on:
   push:
     branches:
       - master
   schedule:
-    - cron: '5 16,22 * * *'
+    - cron: '0 21 * * *'
 
 jobs:
-  tieba_sign:
+  daily-email:
     runs-on: ubuntu-latest
     steps:
       - name: 'Checkout codes'
@@ -29,7 +29,7 @@ jobs:
           server_port: 465
           username: ${{ secrets.MAIL_YANDEX_USERNAME }}
           password: ${{ secrets.MAIL_YANDEX_PASSWD }}
-          subject: Nanjing Weather Report (${{env.REPORT_DATE}})
+          subject: Daily Report
           body: file://weather.html
           to: wanshojs@gmail.com
           from: GitHub Actions
