--- a/.github/workflows/daily-report.yml
+++ b/.github/workflows/daily-report.yml
@@ -21,7 +21,7 @@ jobs:
       - name: 'Install dependencies'
         run: python -m pip install --upgrade requests
       - name: 'action1'
-        run: python actions.py
+        run: python report-weather.py
       - name: 'Send mail'
         uses: dawidd6/action-send-mail@master # 使用别人已经写好的 action
         with:
