--- a/.github/workflows/daily-report.yml
+++ b/.github/workflows/daily-report.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           python-version: '3.6'
       - name: 'Install dependencies'
-        run: python -m pip install --upgrade requests pandas
+        run: python -m pip install --upgrade requests pandas matplotlib
       - name: 'action1'
         run: python report-weather.py
       - name: 'Send mail'
