--- a/.github/workflows/daily-report.yml
+++ b/.github/workflows/daily-report.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - master
   schedule:
-    - cron: '0 22,10 * * *' # 国际标准时间 早上 6 点，中午 12 点，晚上 6 点，一天运行三次
+    - cron: '30 10 * * *' # 国际标准时间 早上 6点半
 
 jobs:
   daily-email:
@@ -33,6 +33,6 @@ jobs:
           password: ${{ secrets.MAIL_YANDEX_PASSWD }}
           subject: Daily Report
           body: file://report.html
-          to:  ${{ secrets.QQMAIL }}, ${{ secrets.GMAIL }}
+          to:  ${{ secrets.QQMAIL }} #, ${{ secrets.GMAIL }}
           from: GitHub Actions
           content_type: text/html
